<resources>
    <string name="app_name">Feettrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marius Bertagne Rey--Mauzaize</string>
    <string name="nav_header_subtitle">27 relations</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_accueil">Accueil</string>
    <string name="menu_stat_perso">Statistiques personnelles</string>
    <string name="menu_equipes">Équipes</string>
    <string name="menu_actualites">Actualités</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_parametres">Paramètres</string>
    <string name="menu_disconnect">Se déconnecter</string>
    <string name="menu_aide">Aide</string>
    <string name="generer_analyse">Nouveau ? Un tuto pour vous</string>
    <string name="faq">Un problème ? F.A.Q</string>
    <string name="general">Général</string>
    <string name="parametre">Paramètre</string>
    <string name="theme">Thème</string>
    <string name="rappel">Rappel</string>
    <string name="centre_de_notification">Centre de Notification</string>
    <string name="profil">Profil</string>
    <string name="modifier_photo">Modifier Photo</string>
    <string name="synchroniser">Synchroniser puce FEETTRACK</string>
    <string name="gerer_status">Gérer status</string>
    <string name="network">Network</string>
    <string name="photo_de_couverture">photo_de_couverture</string>
    <string name="logo_club">logo_club</string>
    <string name="menu_analyse">Analyse</string>
    <string name="menu_analyse_poussee">Analyse Poussee</string>
    <string name="nom">Bertagne Rey--Mauzaize</string>
    <string name="prenom">Marius</string>
    <string name="age">22 ans</string>
    <string name="resultats">Résultats</string>
    <string name="heatmap">Heatmap moyenne cette saison</string>
    <string name="title_activity_analyse">AnalyseActivity</string>

</resources>