<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stat_perso.StatPersoFragment"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nom"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/prenom"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/age"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nav_resultats"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="64dp"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/stat_resultats"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="ContentDescription,MissingConstraints"
        android:contentDescription="TODO"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/nav_heatmap"
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="64dp"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/heatmap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_resultats" />

    <TextView
        android:id="@+id/resultats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultats"
        app:layout_constraintBottom_toTopOf="@+id/nav_resultats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/heatmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heatmap"
        app:layout_constraintBottom_toTopOf="@+id/nav_heatmap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_resultats" />

</androidx.constraintlayout.widget.ConstraintLayout>